--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Wish you tag</title>
 </head>
 <body>
-  <input type="text" id="textInput" onChange="handleChange()" />
+  <input type="text" id="textInput" onkeyup="handleChange()" />
   <p id="text-tag"></p>
   <script src="app.js" type="text/javascript"></script>
 </body>
