--- a/index.html
+++ b/index.html
@@ -2,11 +2,29 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Wish you tag</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title>ขอให้... ทุกคนมีความสุข :D</title>
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/style.css">
+  <!-- Scripts -->
+  <script   src="https://code.jquery.com/jquery-2.2.4.min.js"   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="   crossorigin="anonymous"></script>
+  <script src="js/bootstrap.min.js"></script>
 </head>
 <body>
-  <input type="text" id="textInput" onkeyup="handleChange()" />
-  <p id="text-tag"></p>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-xs-12 text-center">
+        <br>
+        <div class="col-lg-6 col-lg-offset-3">
+          <input type="text" class="form-control col-centered input-lg" id="textInput" onkeyup="handleChange()"/>
+        </div>
+        <br>
+        <div class="col-lg-12 text-center">
+          <div id="text-tag"></div>
+        </div>
+      </div>
+    </div>
+  </div>
   <script src="app.js" type="text/javascript"></script>
 </body>
 </html>
