--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <!-- Scripts -->
   <script   src="https://code.jquery.com/jquery-2.2.4.min.js"   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="   crossorigin="anonymous"></script>
   <script src="js/bootstrap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.5.12/clipboard.min.js"></script>
 </head>
 <body>
   <div class="container-fluid">
@@ -22,6 +23,8 @@
         <div class="col-lg-12 text-center">
           <div id="text-tag"></div>
         </div>
+        <br>
+        <button class="btn" onclick="copyText()" data-clipboard-target="#text-tag">Copy</button>
       </div>
     </div>
   </div>
