Style copy button

--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
         <div class="col-lg-12 text-center">
           <div id="text-tag"></div>
         </div>
-        <br>
-        <button class="btn" onclick="copyText()" data-clipboard-target="#text-tag">Copy</button>
+        <br><br>
+        <button class="btn btn-success" id="copy-btn" onclick="copyText()" data-clipboard-target="#text-tag"><b>คัดลอกข้อความ</b></button>
+        <p class="text-center" id="noti"></p>
       </div>
     </div>
   </div>
