--- a/index.html
+++ b/index.html
@@ -17,14 +17,17 @@
       <div class="col-xs-12 text-center">
         <br>
         <div class="col-lg-6 col-lg-offset-3">
-          <input type="text" class="form-control col-centered input-lg" id="textInput" onkeyup="handleChange()"/>
+          <div>
+            <input type="text" class="form-control col-centered input-lg" id="textInput" onkeyup="handleChange()"/>
+            <!-- <div class="text-right">*จะเว้นบรรทัดตามช่องว่างนะครับ</div> -->
+          </div>
         </div>
         <br>
         <div class="col-lg-12 text-center">
           <div id="text-tag"></div>
         </div>
         <br><br>
-        <button class="btn btn-success" id="copy-btn" onclick="copyText()" data-clipboard-target="#text-tag"><b>คัดลอกข้อความ</b></button>
+        <button class="btn btn-secondary-outline btn-lg" id="copy-btn" onclick="copyText()" data-clipboard-target="#text-tag" data-toggle="tooltip" data-placement="top">คัดลอกข้อความ</button>
         <p class="text-center" id="noti"></p>
       </div>
     </div>
