--- a/index.html
+++ b/index.html
@@ -31,6 +31,22 @@
         <p class="text-center" id="noti"></p>
       </div>
     </div>
+
+    <div class="text-center footer row">
+      <p class="splitter">___</p>
+      <p class="viewers">
+        <b id="pageviews">100</b> คนเข้าเยี่ยมชม!<br />
+        <a href="http://statcounter.com/" target="_blank"><img src="http://www.statcounter.com/images/button4.png" alt="Site Stats" width="80" height="15" border="0" /></a>
+      </p>
+      <p class="viewers" style={{display: "inline-block"}}>
+        <ShareSocial />
+      </p>
+      <p class="description">
+      แอพสร้างข้อความป้าย · Created by&nbsp;
+      <a href="https://twitter.com/aikdanai" target="_blank">Aikdanai Sidhikosol</a> · <a href="https://github.com/zugarzeeker" target="_blank">Supanut Apikulvanich</a><br>
+      <a href="https://github.com/zugarzeeker/wish-you-tag" target="_blank">GitHub Project</a> · <a href="https://github.com/zugarzeeker/wish-you-tag/issues" target="_blank">Issues</a>
+      </p>
+    </div>
   </div>
   <script src="app.js" type="text/javascript"></script>
 </body>
