--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <meta property="og:title" content='แอพสร้างข้อความป้าย'>
+  <meta property="og:site_name" content="">
+  <meta property="og:url" content="https://zugarzeeker.github.io/wish-you-tag/">
+  <meta property="og:image" content="https://zugarzeeker.github.io/wish-you-tag/img/ogimg.png">
+  <meta property="og:description" content='แอพสร้างข้อความป้าย! สร้างข้อความอวยพรเพื่อนๆในรูปแบบป้ายได้ง่ายๆเพียงไม่กี่วินาที'>
+
   <title>ขอให้มาเล่นกันเยอะๆนะครับ...</title>
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css">
