Bring back text tip

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="col-lg-6 col-lg-offset-3">
           <div>
             <input type="text" class="form-control col-centered input-lg" id="textInput" onkeyup="handleChange()"/>
-            <!-- <div class="text-right">*จะเว้นบรรทัดตามช่องว่างนะครับ</div> -->
+            <div class="text-right">*จะเว้นบรรทัดตามช่องว่างนะครับ</div>
           </div>
         </div>
         <br>
