Change initial value

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta property="og:image" content="https://zugarzeeker.github.io/wish-you-tag/img/ogimg-v2.png">
   <meta property="og:description" content='แอพสร้างข้อความป้าย! สร้างข้อความอวยพรเพื่อนๆในรูปแบบป้ายได้ง่ายๆเพียงไม่กี่วินาที'>
 
-  <title>ขอให้มาเล่นกันเยอะๆนะครับ...</title>
+  <title>แอพสร้างข้อความป้าย...</title>
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css">
   <!-- Scripts -->
