--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <br>
         <div class="col-lg-6 col-lg-offset-3">
           <div>
-            <input type="text" class="form-control col-centered input-lg" id="textInput" onkeyup="handleChange()"/>
-            <div class="text-right">*จะเว้นบรรทัดตามช่องว่างนะครับ</div>
+            <input type="text" class="form-control col-centered input-lg" id="textInput" onkeyup="handleChange()" placeholder="จะเว้นบรรทัดตามช่องว่าง (spacebar) นะครับ..."/>
+            <div class="text-right">*จะเว้นบรรทัดตามช่องว่าง (spacebar) นะครับ</div>
           </div>
         </div>
         <br>
